<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration"
    android:background="@drawable/background2">


        <TextView
            android:id="@+id/Registration"
            android:layout_width="@dimen/Registrationlayout_width"
            android:layout_height="@dimen/Registrationlayout_height"
            android:backgroundTint="#B6A0A0"
            android:text="@string/Registration"
            android:textColor="#000000"
            android:textSize="@dimen/RegistrationtextSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Emaillayout_marginStart"
            android:layout_marginTop="@dimen/Emaillayout_marginTop"
            android:layout_marginEnd="@dimen/Emaillayout_marginEnd"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/EmailminHeight"
            app:layout_constraintBottom_toTopOf="@+id/Password2"
            app:layout_constraintEnd_toEndOf="@+id/Registration"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/Registration"
            app:layout_constraintTop_toBottomOf="@+id/Phone" />

        <EditText
            android:id="@+id/Password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/Password2"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/ReEnterPassword"
            app:layout_constraintEnd_toEndOf="@+id/Registration"
            app:layout_constraintStart_toStartOf="@+id/Registration"
            app:layout_constraintTop_toBottomOf="@+id/Email"
            app:passwordToggleEnabled="true"/>
        <Button
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginEnd="82dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="#2D7B88"
            android:text="@string/signin"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/Registration"
            app:layout_constraintEnd_toEndOf="@+id/Registration"
            app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintStart_toStartOf="@+id/Registration"
            app:layout_constraintTop_toBottomOf="@+id/ReEnterPassword" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/Phone"
            app:layout_constraintEnd_toEndOf="@+id/Registration"
            app:layout_constraintStart_toStartOf="@+id/Registration"
            app:layout_constraintTop_toTopOf="@+id/Registration" />

        <EditText
            android:id="@+id/Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/Phone"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/Email"
            app:layout_constraintEnd_toEndOf="@+id/Registration"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/Registration"
            app:layout_constraintTop_toBottomOf="@+id/Name" />

        <EditText
            android:id="@+id/ReEnterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="23dp"
            android:ems="10"
            android:hint="@string/ReEnterPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/Registration"
            app:layout_constraintHorizontal_bias="0.272"
            app:layout_constraintStart_toStartOf="@+id/Registration"
            app:layout_constraintTop_toBottomOf="@+id/Password2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="Already registered,pleace login"
            android:textColor="#2D7B88"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/Registration"
            app:layout_constraintEnd_toEndOf="@+id/Registration"
            app:layout_constraintStart_toStartOf="@+id/Registration"
            app:layout_constraintTop_toBottomOf="@+id/signin"
            app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>