<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileForCompany"
    android:background="@drawable/background2">


        <TextView
            android:id="@+id/jobDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="43dp"
            android:layout_marginBottom="17dp"
            android:text="@string/JobDone"
            android:textColor="#F2831B"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="126dp"
            android:layout_height="125dp"
            android:layout_marginStart="132dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="153dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/ComName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="609dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/baseline_notifications_24" />

        <Button
            android:id="@+id/ComEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="171dp"
            android:layout_marginBottom="75dp"
            android:backgroundTint="#2D7B88"
            android:text="@string/ComEdit"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ComPhone" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="81dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="21dp"
            android:backgroundTint="#2d7b88"
            android:text="@string/button2"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="81dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="21dp"
            android:backgroundTint="#2D7B88"
            android:text="@string/button3"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ComName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="126dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/ComName"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/ComEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/ComEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/ComEmail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/ComAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ComName" />

        <EditText
            android:id="@+id/ComAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="126dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/ComAddress"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/ComPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ComEmail" />

        <EditText
            android:id="@+id/ComPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="78dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="123dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/ComPhone"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@+id/ComEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ComAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>